# HF_InstructorEmbedding

./: .gitignore  08_instructor_embeddings.py  README.md  importLoginHF.py  pyproject.toml
